# Projects

./: README.md
MountainPaths Final/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Store Backend/: CMakeLists.txt  Customer.cpp  Customer.h  Product.cpp  Product.h  Store.cpp  Store.h  main.cpp
Temp Queries/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  TemperatureData.cpp  TemperatureData.h  TemperatureDatabase.cpp  TemperatureDatabase.h  main.cpp
